--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "baseUrl": "src",
+    "skipLibCheck": true,
     "paths": {
       "@components/*": [
         "components/*"
